# Kittyapp_Django_v1

./: .env.andorid  .replit  capacitor.config.ts  create_superuser.py  manage.py  neon_to_sheets.py  package-lock.json  package.json  pyproject.toml  replit.md  run_django_server.py  start_django.sh  test_neon_connection.py  theme.json
attached_assets/: Pasted--base-PS-D-APP-Pruebas-git-clone-https-github-com-javo-mauro-Kittyapp-Django-v1-git-Cloning-in-1755572255514_1755572255516.txt  Pasted--syyyyyyys-yho-yd--1755562262263_1755562262264.txt  Pasted-Inicializando-la-base-de-datos-Base-de-datos-ya-inicializada-10-47-59-PM-mqtt-Usando-broker-M-1755571818797_1755571818799.txt  Pasted-Run-npm-audit-for-details-base-PS-D-APP-Pruebas-Kittyapp-Django-v1-npm-run-dev--1755572946832_1755572946834.txt  Pasted-Run-npm-audit-for-details-base-PS-D-APP-Pruebas-Kittyapp-Django-v1-npm-run-dev--1755573011310_1755573011311.txt  Pasted-Scaling-Render-Services-Run-multiple-instances-to-handle-additional-load-You-can-run-multiple-ins-1755559592905_1755559592906.txt  Pasted-UUID-device-id-Topicos-STATUS-MQTT-Broker-URL-Client-ID-Certificado-CA-Autoridad-Certificadora-Cer-1754791943753_1754791943753.txt  styles.css
client/: index.html
kittypaw_app/: admin.py  apps.py  consumers.py  models.py  mqtt_client.py  routing.py  serializers.py  urls.py  views.py
kittypaw_project/: asgi.py  settings.py  urls.py  wsgi.py
server/: database-storage.ts  db-init.ts  index.ts  mqtt.ts  routes.ts  storage.ts
shared/: schema.ts
templates/: base.html  device_detail.html  devices.html  index.html  (+3 more)
(+23 files in other folders)
